--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 - oraclejdk8
 script:
 - ".travis/publish_local.sh"
-- sbt +test
+- sbt coverage +test
 before_deploy:
 - pip install --user release-manager==0.4.1.rc2
 deploy:
