--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Install sbt
+      uses: sbt/setup-sbt@v1
     - name: Run tests
       run: sbt +test
     - name: Check Scala formatting
